# specter

./: .gitignore  Makefile  README.md  cloaker.py  main.py
back_end/: api_postman_tests.json  pyproject.toml
back_end/back_end/: asgi.py  settings.py  urls.py  wsgi.py
back_end/rest_api/: models.py  serializers.py  urls.py
back_end/rest_api/migrations/: 0001_initial.py  0002_auto_20201010_0234.py
front_end/: package-lock.json  package.json
video_processing/: Makefile  main.py  requirements.txt
