[tool.poetry]
name = "specter_back_end"
version = "0.1.0"
description = ""
authors = ["Maxwell Farver", "Evan Mills"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
Django = "^3.1.2"
djangorestframework = "^3.12.1"
dj-rest-auth = "^1.1.2"
django-allauth = "^0.42.0"
djangorestframework-simplejwt = "^4.4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
